@@ -1,0 +1,24 @@
+/* This file is only used when ftw.theming and ftw.mobile is installed. */
+
+#subsitelanguage-mobile-button {
+  a {
+    @include auto-text-color($color-mobile-button);
+    background-color: $color-mobile-button;
+    display: inline-block;
+    width: $size-mobile-button;
+    line-height: $size-mobile-button;
+    font-size: $font-size-mobile-button;
+    text-align: center;
+    &:before {
+      display: none;
+    }
+  }
+}
+
+#portal-languageselector-wrapper #portal-languageselector{
+  display: none;
+
+  @include tablet {
+    display: block;
+  }
+}
