@@ -1,12 +1,14 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:theme="http://namespaces.zope.org/ftw.theming"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="ftw.subsite">
 
     <include package="ftw.theming" file="meta.zcml" />
 
     <theme:resources profile="ftw.subsite:default" slot="addon">
         <theme:scss file="browser/ressources/integration.theme.scss" after="ftw.mobile:scss/mobile-buttons.scss" />
+        <theme:scss file="browser/ressources/integration.ftw-mobile.theme.scss" after="browser/ressources/integration.theme.scss" zcml:condition="installed ftw.mobile" />
     </theme:resources>
 
 </configure>
